# defenda-platform

./: .clineignore  README.md  implementation_plan.md
services/alertA/: Dockerfile  check_firestore.py  check_firestore2.py  cloudbuild.yaml  pyproject.toml
services/alertA/rules/: alerta_cron_degraded.yml  an_alert.yml  deadman_gcp_audit_feed.yml  deadman_gcp_data_access_feed.yml  deadman_google_workspace_feed.yml  deadman_ingest_pipeline.yml
services/alertA/sample_rules/: multiple_risky_logins.yml
services/alertA/src/: evaluator.py  main.py  oidc.py
services/alertA/tests/: test_cron_fanout.py  test_deadman_rules.py  test_evaluator.py
services/ingestA/: .dockerignore  Dockerfile  cloudbuild.yaml  main.py  pyproject.toml
services/ingestA/src/: main.py
services/ingestA/src/enrichment_plugins/: __init__.py  ensure_eventid.py
services/ingestA/src/normalization_plugins/: __init__.py  cloudtrail.py  drop_self_telemetry.py  event_shell.py  gcp_audit.py  google_admin.py  gsuite_login.py
services/ingestA/src/utils/: dates.py  plugins.py
services/ingestA/tests/: test_core.py  test_plugin_cloudtrail.py  test_plugin_drop_self_telemetry.py  test_plugin_gcp_audit.py  test_plugin_google_admin.py  test_plugin_gsuite_logins.py  test_plugin_ip_addresses.py  test_plugin_timestamps.py  test_plugins.py
services/ingestA/tests/samples/: sample_cloudtrail_console_login.json  sample_cloudtrail_delete_bucket.json  sample_cloudtrail_failed_api_call.json  sample_gcp_audit_sa_scoped_set_iam_policy.json  sample_gcp_audit_set_iam_policy.json  sample_gcp_audit_set_iam_policy_multi_binding.json
services/queryA/: Dockerfile  README.md  cloudbuild.yaml  pyproject.toml
services/queryA/src/: main.py  query.py
services/queryA/tests/: test_query.py
(+100 files in other folders)
