[project]
name = "querya"
version = "0.1.0"
description = "Ad-hoc BigQuery event query API for the defendA platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "google-auth>=2.38.0",
    "google-cloud-bigquery>=3.40.1",
    "pydantic>=2.12.5",
    "requests>=2.32.0",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
